src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_Place__c</fullName>
        <label>Area / Place</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_MR__c</fullName>
        <label>Assigned MR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Anniversary__c</fullName>
        <label>Doctor Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Head_Quarter__c</fullName>
        <label>Head Quarter</label>
        <referenceTo>Head_Quarter__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Doctors</relationshipLabel>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Phy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEPHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORTHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEAD CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEUMATO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Business_Revenue__c</fullName>
        <label>Total Business Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Place__c</columns>
        <columns>Category__c</columns>
        <columns>Hospital__c</columns>
        <columns>Speciality__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>